# MonolithFarm

./: .env.example  .gitignore  README.md  info.md  monolithfarm.paths.example.json  pyproject.toml  streamlit_app.py
.streamlit/: config.toml  custom.css
dashboard/: README.md  __init__.py  app.py  database.py  feature_lineage_app.py
docs/: ARQUITETURA.md  COLAB_DRIVE.md  COMO_EXECUTAR.md  PRIMEIRO_USO_FACULDADE.md
farmlab/: __init__.py  analysis.py  complete_analysis.py  config.py  database.py  io.py  ndvi_crispdm.py  ndvi_deepdive.py  pairwise.py
lineage_atlas/: README.md  index.html  package-lock.json  package.json  vite.config.ts
notebooks/: complete_ndvi_analysis.ipynb  ndvi_master_analysis.ipynb  phase1_ndvi_pairwise.ipynb  phase2_ndvi_deepdive.ipynb  phase3_ndvi_crispdm.ipynb
scripts/: bootstrap_data.py  export_lineage_atlas_data.py  generate_complete_ndvi_notebook.py  generate_complete_ndvi_review.py  generate_ndvi_master_notebook.py  generate_phase1_notebook.py  generate_phase1_review.py  generate_phase2_ndvi_notebook.py  generate_phase2_ndvi_review.py  generate_phase3_ndvi_notebook.py  generate_phase3_ndvi_review.py  notebook_bootstrap.py  render_build.sh  render_start.sh  start_dashboard.ps1  start_dashboard.sh  start_feature_lineage_app.ps1  start_feature_lineage_app.sh  start_lineage_atlas.ps1
templates/: costs.example.csv  season_mapping.example.csv
tests/: test_atlas_export_contract.py  test_complete_analysis.py  test_lineage_audit.py  test_lineage_interactive.py  test_lineage_manifest.py  test_ndvi_crispdm.py  test_ndvi_deepdive.py  (+1 more)
(+25 files in other folders)
